--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 
+spring.application.name=ITS
+
+# Logging
+logging.level.root=info
+logging.level.za.co.discovery.assignment=debug
+#logging.level.web=debug
+
+
+spring.datasource.url=jdbc:h2:mem:its
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.open-in-view=false
+spring.h2.console.enabled=true
