--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ logging.level.za.co.discovery.assignment=debug
 #logging.level.web=debug
 
 
-spring.datasource.url=jdbc:h2:mem:its;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:its;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.initialization-mode=always
 spring.datasource.username=sa
@@ -15,4 +15,4 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.open-in-view=false
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
