calculate shortest parth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ logging.level.za.co.discovery.assignment=debug
 #logging.level.web=debug
 
 
+spring.jpa.database=H2
+#spring.jpa.show-sql=true
+
 spring.datasource.url=jdbc:h2:mem:its;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.initialization-mode=always
@@ -15,4 +18,10 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.open-in-view=false
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.locations=classpath:db/migration
+spring.flyway.url = jdbc:h2:mem:its;
+spring.flyway.user=sa
+spring.flyway.password=password
+spring.flyway.enabled=true
