add angular frontend

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ build/
 
 ### VS Code ###
 .vscode/
+/src/main/frontend/package-lock.json
+/src/main/frontend/node_modules/
+/src/main/resources/static/
