--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
 		<java.version>1.8</java.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 		<jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+		<springfox-swagger.version>2.9.2</springfox-swagger.version>
+		<springfox-swagger-ui.version>2.9.2</springfox-swagger-ui.version>
+		<org.json.version>20180130</org.json.version>
 	</properties>
 
 	<dependencies>
@@ -33,13 +36,13 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
-			<version>2.9.2</version>
+			<version>${springfox-swagger.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.9.2</version>
+			<version>${springfox-swagger-ui.version}</version>
 		</dependency>
 
 		<dependency>
@@ -63,7 +66,7 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20180130</version>
+			<version>${org.json.version}</version>
 		</dependency>
 
 		<dependency>
@@ -139,6 +142,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                	<excludes>
+                		<exclude>**/za/co/discovery/assignment/model/**</exclude>
+                	</excludes>
+                </configuration>
             </plugin>
 			
 
